@@ -156,6 +156,127 @@ _defaultmaps = {
         (192, 40, 47, 255), 
         (180, 4, 38, 255),
         ),
+
+    # from http://geog.uoregon.edu/datagraphics/color_scales.htm
+    'green-magenta': (
+        (0, 80, 0, 255),
+        (0, 134, 0, 255),
+        (0, 187, 0, 255),
+        (0, 241, 0, 255),
+        (80, 255, 80, 255),
+        (134, 255, 134, 255),
+        (187, 255, 187, 255),
+        (255, 255, 255, 255),
+        (255, 241, 255, 255),
+        (255, 187, 255, 255),
+        (255, 134, 255, 255),
+        (255, 80, 255, 255),
+        (241, 0, 241, 255),
+        (187, 0, 187, 255),
+        (134, 0, 134, 255),
+        (80, 0, 80, 255)
+        ),
+
+    'blue-darkred': (
+        (216, 0, 36, 255),
+        (247, 28, 24, 255),
+        (255, 87, 40, 255),
+        (255, 135, 61, 255),
+        (255, 176, 86, 255),
+        (255, 211, 117, 255),
+        (255, 234, 153, 255),
+        (255, 249, 188, 255),
+        (255, 255, 234, 255),
+        (234, 255, 255, 255),
+        (188, 241, 255, 255),
+        (153, 214, 255, 255),
+        (117, 172, 255, 255),
+        (86, 120, 255, 255),
+        (61, 61, 255, 255),
+        (53, 39, 247, 255),
+        (47, 21, 216, 255),
+        (33, 0, 165, 255)
+        ),
+
+    'blue-darkorange': (
+        (102, 102, 0, 255),
+        (153, 153, 0, 255),
+        (204, 204, 0, 255),
+        (255, 255, 0, 255),
+        (255, 255, 51, 255),
+        (255, 255, 101, 255),
+        (255, 255, 153, 255),
+        (255, 255, 178, 255),
+        (255, 255, 203, 255),
+        (255, 255, 229, 255),
+        (203, 229, 255, 255),
+        (153, 202, 255, 255),
+        (101, 173, 255, 255),
+        (51, 142, 255, 255),
+        (0, 110, 255, 255),
+        (0, 85, 204, 255),
+        (0, 61, 153, 255),
+        (0, 39, 102, 255)
+        ),
+
+    'brown-blue': (
+        (0, 25, 51, 255),
+        (0, 47, 102, 255),
+        (53, 96, 153, 255),
+        (122, 155, 204, 255),
+        (151, 175, 216, 255),
+        (205, 218, 242, 255),
+        (255, 253, 204, 255),
+        (255, 248, 153, 255),
+        (255, 239, 101, 255),
+        (255, 227, 50, 255),
+        (204, 169, 0, 255),
+        (153, 122, 0, 255)
+        ),
+
+    'blue-orange': (
+        (255, 42, 0, 255),
+        (255, 101, 25, 255),
+        (255, 153, 50, 255),
+        (255, 204, 101, 255),
+        (255, 237, 153, 255),
+        (255, 255, 204, 255),
+        (204, 255, 255, 255),
+        (153, 238, 255, 255),
+        (101, 204, 255, 255),
+        (50, 153, 255, 255),
+        (25, 102, 255, 255),
+        (0, 42, 255, 255)
+        ),
+
+    'seq': (
+        (15, 15, 153, 255),
+        (44, 44, 178, 255),
+        (81, 81, 204, 255),
+        (126, 126, 229, 255),
+        (178, 178, 255, 255),
+        (15, 84, 153, 255),
+        (44, 111, 178, 255),
+        (81, 142, 204, 255),
+        (126, 177, 229, 255),
+        (178, 216, 255, 255),
+        (15, 153, 107, 255),
+        (44, 178, 133, 255),
+        (81, 204, 163, 255),
+        (126, 229, 195, 255),
+        (178, 255, 229, 255),
+        (153, 107, 15, 255),
+        (178, 133, 44, 255),
+        (204, 163, 81, 255),
+        (229, 195, 126, 255),
+        (255, 229, 178, 255),
+        (153, 15, 38, 255),
+        (178, 44, 66, 255),
+        (204, 81, 101, 255),
+        (229, 126, 143, 255),
+        (255, 178, 191, 255),
+        ),
+
     }
 
 def cubehelix(start, rots, hue, gamma, nlev=64):
@@ -290,6 +411,12 @@ class ColorMaps(object):
             'royal-step',
             'spectrum-step',
             'transblack-step5',
+            'green-magenta-step16',
+            'blue-darkred-step12',
+            'blue-darkorange-step12',
+            'brown-blue-step12',
+            'blue-orange-step12',
+            'seq-step25',
         ])
         return iter(items)
 
